# MCP_Sentinel

./: .gitignore  ADVANCED_USAGE.md  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGELOG.md  CI_CD_INTEGRATION.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_AUTOMATION.md  ERROR_HANDLING.md  EXAMPLES.md  FAQ.md  FEATURE_CHECKLIST.md  FINAL_SUMMARY_V1.5.md  GETTING_STARTED.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETUP.md  LICENSE  LOGGING.md  PUSH_TO_GITHUB.md  PUSH_TO_MCP_SENTINEL.md  README.md  SECURITY.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  USER_GUIDE.md  V1.5_ENHANCEMENT_PLAN.md  V1.5_RELEASE_SUMMARY.md  push.sh
.doc-templates/: DETECTOR.md.template  FEATURE.md.template
.github/workflows/: ci.yml  docs-validation.yml
scripts/docs/: generate-doc.sh  validate-docs.sh
src/: lib.rs  main.rs  scanner.rs
src/cli/: mod.rs  scan.rs
src/detectors/: code_injection.rs  code_vulns.rs  deserialization.rs  mod.rs  path_traversal.rs  prompt_injection.rs  secrets.rs  sql_injection.rs  ssrf.rs  tool_poisoning.rs
src/engines/: mod.rs
src/models/: vulnerability.rs
src/output/: mod.rs  terminal.rs
src/storage/: mod.rs
src/utils/: mod.rs
