[package]
name = "mcp-sentinel"
version = "1.0.0"
edition = "2021"
authors = ["MCP Sentinel Contributors"]
description = "The Ultimate Security Scanner for MCP Servers - combining static analysis, runtime monitoring, and AI-powered detection"
license = "Apache-2.0"
repository = "https://github.com/yourusername/MCP_Scanner"
keywords = ["mcp", "security", "scanner", "vulnerability", "static-analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core Framework
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "cargo", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Static Analysis
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
regex = "1"
walkdir = "2"
ignore = "0.4"

# Runtime Proxy
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# AI Analysis
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.20"
# anthropic-sdk = "0.1"  # Note: Will need to verify actual crate name
# ollama-rs = "0.1"      # Note: Will need to verify actual crate name

# Output Generation
crossterm = "0.27"
indicatif = "0.17"
comfy-table = "7"
syntect = "5"
handlebars = "5"
# printpdf = "0.7"       # For PDF generation (Phase 4)

# Storage
sled = "0.34"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.21"
tempfile = "3"
url = "2"
once_cell = "1"
num_cpus = "1"
dirs = "5"

# HTTP Client
http = "1"

[[bin]]
name = "mcp-sentinel"
path = "src/main.rs"

[lib]
name = "mcp_sentinel"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1"
mockall = "0.12"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "scan_benchmark"
harness = false

[[bench]]
name = "detection_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
